tests/NormalTests/paczka1/small_fuzzy/68475166.err
Error in line 7: st4 S151 49,1
Error in line 14: UMIEC7I S151 1,59
Error in line 11: UMIEC7I A640 77,8
